--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ repository = "https://github.com/richardstrnad/rustyaci"
 anyhow = "1.0.81"
 dotenvy = "0.15.7"
 futures = "0.3.29"
-reqwest = { version = "0.11.22", features = ["cookies", "json"] }
+reqwest = { version = "0.11.25", features = ["cookies", "json"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 tokio = { version = "1.34.0", features = ["full"] }
+openssl-sys = "0.9.69" # Ubuntu build issue
