--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,6 @@ reqwest = { version = "0.11.25", features = ["cookies", "json"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 tokio = { version = "1.34.0", features = ["full"] }
-openssl-sys = "0.9.69" # Ubuntu build issue
+
+# for -Zminimal-versions
+openssl = "0.10.38" # Ubuntu build issue
