test: Add Mock based testing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,5 @@ tokio = { version = "1.34.0", features = ["full"] }
 
 # for -Zminimal-versions
 openssl = "0.10.38" # Ubuntu build issue
+http = "0.2"
+trait-variant = "0.1.1"
