--- a/.github/workflows/safety.yml
+++ b/.github/workflows/safety.yml
@@ -68,4 +68,4 @@ jobs:
       - name: cargo miri test
         run: cargo miri test
         env:
-          MIRIFLAGS: ""
+          MIRIFLAGS: "-Zmiri-disable-isolation"
