--- a/.github/workflows/safety.yml
+++ b/.github/workflows/safety.yml
@@ -52,20 +52,22 @@ jobs:
         env:
           LSAN_OPTIONS: "suppressions=lsan-suppressions.txt"
           RUSTFLAGS: "-Z sanitizer=leak"
-  miri:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: true
-      - run: |
-          echo "NIGHTLY=nightly-$(curl -s https://rust-lang.github.io/rustup-components-history/x86_64-unknown-linux-gnu/miri)" >> $GITHUB_ENV
-      - name: Install ${{ env.NIGHTLY }}
-        uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: ${{ env.NIGHTLY }}
-          components: miri
-      - name: cargo miri test
-        run: cargo miri test
-        env:
-          MIRIFLAGS: "-Zmiri-disable-isolation"
+  # disable for now, there seems to be some limitations regarding tokio
+  # https://github.com/rust-lang/miri/issues/602
+  # miri:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         submodules: true
+  #     - run: |
+  #         echo "NIGHTLY=nightly-$(curl -s https://rust-lang.github.io/rustup-components-history/x86_64-unknown-linux-gnu/miri)" >> $GITHUB_ENV
+  #     - name: Install ${{ env.NIGHTLY }}
+  #       uses: dtolnay/rust-toolchain@master
+  #       with:
+  #         toolchain: ${{ env.NIGHTLY }}
+  #         components: miri
+  #     - name: cargo miri test
+  #       run: cargo miri test
+  #       env:
+  #         MIRIFLAGS: "-Zmiri-disable-isolation"
