--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ serde_json = "1.0.108"
 tokio = { version = "1.34.0", features = ["full"] }
 http = "1"
 trait-variant = "0.1.1"
+time = "0.3.36"
 
 # for -Zminimal-versions
 openssl = "0.10.55" # Ubuntu build issue
