--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,10 @@ homepage = "https://github.com/richardstrnad/rustyaci"
 readme = "README.md"
 repository = "https://github.com/richardstrnad/rustyaci"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+include = [
+    "**/*.rs",
+    "Cargo.toml",
+]
 
 [dependencies]
 anyhow = "1.0.81"
